<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OmniShare</string>
    <string name="action_settings">Settings</string>
    <string name="str_mymeetings">My Meetings</string>
    <string name="str_scanavailablenetw">Scan For Meetings</string>
    <string name="str_configuration">Configuration</string>
    <string name="str_create_new_meeting">Create New Meeting</string>
    <string name="str_remove_meeting">Remove Meeting</string>
    <string name="str_start_as_host">Start As Host</string>
    <string name="str_meeting_name">Meeting Name</string>
    <string name="str_location">Location</string>
    <string name="str_date">Date</string>
    <string name="str_access_code">Access Code</string>
    <string name="str_curr_attached_files">Currently Attached Files</string>
    <string name="str_addremove_files">Add / Remove File</string>
    <string name="str_available_networks">Available Meetings</string>
    <string name="str_join_network">Join Meeting</string>
    <string name="title_activity_guest_joined_network">GuestJoinedNetwork</string>
    <string name="str_currentview">Current View</string>
    <string name="str_filelist">File List</string>
    <string name="str_view">View</string>
    <string name="str_save">Save</string>
    <string name="title_activity_create_meeting">CreateMeeting</string>
    <string name="title_activity_add_files">AddFilesActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_host_start_view">HostStartView</string>
    <string name="hostview_curr_view_title">Current View</string>
    <string name="hostview_file_list_title">File List</string>
    <string name="hostview_active_disp_device">Display Device</string>
    <string name="title_activity_display_image">DisplayImage</string>
    <string name="title_activity_pdfhostview">PDFActivity</string>
    <string name="title_activity_display_video">DisplayVideoActivity</string>
    <string name="title_activity_pptview">PPTViewActivity</string>
    <string name="title_activity_pdf_guest_view">PdfGuestViewActivity</string>
    <string name="title_activity_host_scan_networks">HostScanMeetingsActivity</string>
    <string name="title_activity_guest_display_image">GuestDisplayImageActivity</string>

</resources>