<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtv_MeetingsHead"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/str_mymeetings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/lv_meetingslist"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.52"
        android:entries="@array/strarr_meetings" >
    </ListView>
	
    <Button
        android:id="@+id/btn_createNewMeeting"
        android:layout_width="192dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/str_create_new_meeting" />

    <Button
        android:id="@+id/btn_removeMeeting"
        android:layout_width="192dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/str_remove_meeting" />

    <Button
        android:id="@+id/btn_startAsHost"
        android:layout_width="192dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/str_start_as_host" />

</LinearLayout>